--- a/.github/workflows/job-monitor.yml
+++ b/.github/workflows/job-monitor.yml
@@ -42,5 +42,4 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add seen-jobs.json
-          git diff --quiet && git diff --staged --quiet || git commit -m "Update seen jobs [skip ci]"
-          git push || echo "Nothing to commit or push failed"
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update seen jobs [skip ci]" && git push) || echo "No changes to commit"
